# UCT401

./: .gitignore  CMakeLists.txt  Makefile  OperatingSystemLab.cpp  OperatingSystemLab.h  README.md  READme.md  banker removed in readme.md  banker_algorithm__safety_algo.cpp  main.cpp
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  operating_system_lab
include/: OperatingSystemLab.h
src/: OperatingSystemLab.cpp
util/: logger.cpp  logger.h
